# lecture-testing-task

05_hw/: CMakeLists.txt  benchmark_push_pop.c  main.c  stack.c  stack.h  test_stack.c
